--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Comprehensive Data Cleaning and <br />
+										<h2><a href="https://github.com/IncharaNingappa/ProtfolioProjects/blob/main/Layoffdatacleaning1.sql">Comprehensive Data Cleaning and <br />
 											Analysis of Layoffs Data</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Image8.webp" alt="" /></a>
+									<a href="https://github.com/IncharaNingappa/ProtfolioProjects/blob/main/Layoffdatacleaning1.sql" class="image fit"><img src="images/Image8.webp" alt="" /></a>
 									<p>This Project demonstrates a step-by-step approach to cleaning, transforming, and analyzing layoff data. It includes techniques for deduplication, data standardization, calculating trends and metrics, and generating insights into layoff patterns across companies, industries, and locations..</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/IncharaNingappa/ProtfolioProjects/blob/main/Layoffdatacleaning1.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
